# embedded-superloop

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  ChangeLog.md  LICENSE  Ozone.jdebug  README.md  tbump.toml
cmake/: stm32.cmake
documentation/: cortex-m-modes.md  cortex-m-registers.txt  links.dox  supervisor.md  thumb2-mnemonics.txt  vocabulary.txt
include/: compiler.hpp  cortex_m4.h  debug.hpp  iso.hpp  polyfill.hpp  stm32.h
modules/board/: CMakeLists.txt
modules/board/stm32_f4ve_v2/: board.cpp  board.hpp
modules/core/: CMakeLists.txt
modules/core/cmake/: Unit.in  UnitTest.float.in  UnitTest.unsigned.in
modules/core/include/: debug.hpp  iso.hpp
modules/core/include/core/: Allocator.hpp  Array.hpp  BitMapHeap.hpp  Buffer.hpp  Container.hpp  EnumType.hpp  Event.hpp  Folds.hpp  Fraction.hpp  Intervals.hpp  Pool.hpp  Printer.hpp  Result.hpp  Ring.hpp  Span.hpp  Split.hpp  Stack.hpp  StateMachine.hpp  Status.hpp  Units.hpp  Variant.hpp  core.hpp  std.hpp
modules/core/include/core/avl/: Node.hpp
modules/core/include/core/doublelink/: Node.hpp
modules/core/include/core/units/: Unit.hpp
modules/core/source/: Allocator.cpp  Status.cpp  constexpr_tests.cpp  eabi.cpp  new.cpp
modules/core/tests/: array.cpp  avl.cpp  container.cpp  doublelink.cpp  enums.cpp  events.cpp  folds.cpp  fraction.cpp  heap.cpp  intervals.cpp  pool.cpp  print.cpp  ring.cpp  span.cpp  stack.cpp  statemachine.cpp  status.cpp  units.cpp  variants.cpp
modules/cortex/: CMakeLists.txt
modules/cortex/include/: thumb.hpp
modules/cortex/include/cortex/: bist.hpp  clocks.hpp  core.hpp  debug.hpp  exceptions.hpp  globals.hpp  linker.hpp  m4.hpp  mcu.hpp  mpu.hpp  nvic.hpp  supervisor.hpp  system.hpp  thumb.hpp  tick.hpp  trace.hpp  vectors.hpp
modules/cortex/include/cortex/handlers/: enter.hpp
modules/cortex/linkerscripts/: cortex-m4.ld
modules/cortex/source/: bist.cpp  cache.cpp  clocks.cpp  globals.cpp  initialize.cpp  memory.cpp  mpu.cpp  nvic.cpp  reset.cpp  spinhalt.cpp  swo.cpp  ticks.cpp  trigger.cpp  vectors.cpp
modules/cortex/source/handlers/: dummy.cpp  entry.cpp  generic.cpp  get_exception_frame.cpp  non_maskable_interrupt.cpp  tick.cpp
modules/cortex/source/handlers/faults/: bus.cpp  hard.cpp  memory_management.cpp  usage.cpp
modules/cortex/source/handlers/supervisor/: call.cpp  pending.cpp
modules/cortex/source/supervisor/: bist.cpp  deescalate.cpp  escalate.cpp  query.cpp  reset.cpp  restore.cpp
modules/cortex/tests/: memory.cpp
modules/jarnax/: CMakeLists.txt
modules/jarnax/include/: jarnax.hpp  w25q16bv.hpp  winbond.hpp
modules/jarnax/include/jarnax/: Assertion.hpp  Button.hpp  Context.hpp  Coordinator.hpp  Copier.hpp  CountDown.hpp  Event.hpp  Executable.hpp  Indicator.hpp  Initializable.hpp  LoopInfo.hpp  Loopable.hpp  Monitor.hpp  RandomNumberGenerator.hpp  Status.hpp  StopWatch.hpp  SuperLoop.hpp  Ticker.hpp  Timer.hpp  Transactable.hpp  Transactor.hpp  UnitTest.hpp  Yieldable.hpp  customize.hpp  linker.hpp  print.hpp  system.hpp  vectors.hpp  version.hpp.in
modules/jarnax/include/jarnax/gpio/: Input.hpp  Output.hpp
modules/jarnax/include/jarnax/handlers/: enter.hpp
modules/jarnax/include/jarnax/spi/: Driver.hpp
modules/jarnax/include/jarnax/uart/: Driver.hpp
modules/jarnax/include/jarnax/usart/: Driver.hpp
modules/jarnax/include/jarnax/winbond/: Driver.hpp
modules/jarnax/source/: CountDown.cpp  Monitor.cpp  Status.cpp  StopWatch.cpp  SuperLoop.cpp  Superloop.cpp  Ticker.cpp  WinbondDriver.cpp  bist.cpp  configure.cpp  main.cpp  print.cpp  reset.cpp  spinhalt.cpp  ticker.cpp  yield.cpp
modules/jarnax/source/drivers/: WinbondDriver.cpp  WinbondStateMachine.cpp
modules/jarnax/source/handlers/: dummy.cpp  entry.cpp  generic.cpp  get_exception_frame.cpp  non_maskable_interrupt.cpp  tick.cpp
modules/jarnax/source/handlers/faults/: bus.cpp  hard.cpp  memory_management.cpp  usage.cpp
modules/jarnax/source/handlers/supervisor/: call.cpp  pending.cpp
modules/jarnax/source/include/jarnax/winbond/: WinbondStateMachine.hpp
modules/jarnax/source/initialize/: class_globals.cpp  load_data.cpp  on_entry.cpp  simple_globals.cpp  static_constructors.cpp  static_destructors.cpp  watermark_stack.cpp  zero_bss.cpp
modules/jarnax/source/startup/: class_globals.cpp  configure.cpp  jump.cpp  on_entry.cpp  simple_globals.cpp  static_destructors.cpp  watermark_stack.cpp
modules/jarnax/source/supervisor/: bist.cpp  deescalate.cpp  escalate.cpp  reset.cpp  restore.cpp
modules/jarnax/tests/: JumpTicker.hpp  JumpTimer.hpp  TestContext.hpp  coordinator.cpp  countdown.cpp  gtest_events.cpp  stopwatch.cpp  superloop.cpp  transactable.cpp  winbondstatemachine.cpp  yieldable.cpp
modules/memory/: CMakeLists.txt
modules/memory/include/: memory.hpp  strings.hpp
modules/memory/source/: compare.cpp  copy.cpp  fill.cpp  memcpy.cpp  memset.cpp  strlen.cpp
modules/native/: CMakeLists.txt
modules/native/cmake/: mac-clang.cmake
modules/native/source/: main.cpp  peripherals.cpp  symbols.cpp
modules/stm32/: CMakeLists.txt
modules/stm32/cmake/: stm32.cmake
modules/stm32/include/cortex/: vendor.hpp
modules/stm32/include/stm32/: Button.hpp  Indicator.hpp  Pin.hpp  RandomNumberGenerator.hpp  SpiDriver.hpp  Timer.hpp  UartDriver.hpp  UsartDriver.hpp  stm32.hpp  stm32f407ve.hpp
modules/stm32/include/stm32/dma/: Driver.hpp
modules/stm32/include/stm32/registers/: Debug.hpp  DirectMemoryAccess.hpp  FlashControl.hpp  GeneralPurposeInputOutput.hpp  RandomNumberGenerator.hpp  ResetAndClockControl.hpp  SerialPeripheralInterface.hpp  Timer2.hpp  UniversalAsynchronousReceiverTransmitter.hpp  UniversalSynchronousAsynchronousReceiverTransmitter.hpp
modules/stm32/linkerscripts/: gcc.ld  stm32f407ve-sections.ld  stm32f407ve.ld
modules/stm32/scripts/: segger_trb_stm32f407.repl  stm32f407ve.jlink
modules/stm32/source/: Button.cpp  DmaDriver.cpp  Indicator.cpp  Pin.cpp  RandomNumberGenerator.cpp  SpiDriver.cpp  UartDriver.cpp  UsartDriver.cpp  backup.cpp  clocks.cpp  gpio.cpp  initialize.cpp  nvic.cpp  timer.cpp  vectors.cpp
(+54 files in other folders)
